@@ -1,4 +1,8 @@
-﻿shmuel 03.02.2015 01:48:32 +0200 - build 480
+﻿shmuel 06.02.2015 17:07:16 +0200 - build 481
+
+1. Уточнение build 476: после вызова Plugin.Call и завершения макроса не производилась перерисовка редактора.
+
+shmuel 03.02.2015 01:48:32 +0200 - build 480
 
 1. LuaFAR: добавлена функция far.FarClock. Документация следует.
 
